force-app/main/default/objects/PS_ASU_SP_DEF_STSV__x/PS_ASU_SP_DEF_STSV__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/15Rv2MYjE0WLy0-0PB1XVMLOa9ED1Kg5m1GNOJeo1EdA/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_DEF_STSVs</externalName>
    <label>Defense Status (external)</label>
    <pluralLabel>Defense Status (external)</pluralLabel>
</CustomObject>