force-app/main/default/objects/PS_ASU_SP_DEF_STSV__x/fields/ACAD_PLAN__c.field-meta.xml
<CustomField>
    <fullName>ACAD_PLAN__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_PETN.ACAD_PLAN</description>
    <externalDeveloperName>ACAD_PLAN</externalDeveloperName>
    <label>Academic Plan</label>
    <length>25</length>
    <referenceTargetField>Plan__c.Plan_Code__c</referenceTargetField>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Defense Status (external)</relationshipLabel>
    <relationshipName>Defense_Status_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>