force-app/main/default/objects/PS_ASU_SP_DEF_STSV__x/fields/DESCRFORMAL__c.field-meta.xml
<CustomField>
    <fullName>DESCRFORMAL__c</fullName>
    <description>Data sourced from PS_MLSTN_LVL_TBL.DESCRFORMAL</description>
    <externalDeveloperName>DESCRFORMAL</externalDeveloperName>
    <label>Milestone Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>