force-app/main/default/objects/PS_ASU_SP_DEF_STSV__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <description>Data sourced from PS_ASU_AA_POS_PETN.EMPLID</description>
    <externalDeveloperName>EMPLID</externalDeveloperName>
    <label>Contact</label>
    <length>10</length>
    <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Defense Status (external)</relationshipLabel>
    <relationshipName>Defense_Status_external</relationshipName>
    <type>IndirectLookup</type>
</CustomField>